--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -685,14 +685,16 @@ components:
       maxLength: 8388608
     errorMessage:
       title: Error message.
+      description: Represents the error message.
       type: object
       properties:
         message: 
           type: string
-          pattern: '^[a-zA-Z0-9_;,:?!()[].]*$'
+          pattern: '^[a-zA-Z0-9_., !?:;""$%&€()[{}]*$'
           example: Error message.
           minLength: 0
           maxLength: 50
+          description: Represents the text of the error.
   responses:
     badRequest:
       description: Incorrect message formatting. 
