--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -645,7 +645,7 @@ components:
       description: Represents an identifier and a username for one user.
       type: object
       properties:
-        id:
+        identifier:
           $ref: '#/components/schemas/stringIdentifier'
         username:
           $ref: '#/components/schemas/stringUsername'
