--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -226,7 +226,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/success'
-        '400':  {$ref: '#/components/responses/badRequest'}
         '401':  {$ref: '#/components/responses/unauthAccess'}
         '404':  {$ref: '#/components/responses/notFoundError'}  
         '409':  {$ref: '#/components/responses/conflictError'}
@@ -243,7 +242,6 @@ paths:
         '204':
           description: |
             User unfollowed successfully.
-        '400':  {$ref: '#/components/responses/badRequest'}
         '404':  {$ref: '#/components/responses/notFoundError'}  
         '409':  {$ref: '#/components/responses/conflictError'}
         '401':  {$ref: '#/components/responses/unauthAccess'}
@@ -704,7 +702,7 @@ components:
           description: Represents the text of the error.
   responses:
     badRequest:
-      description: Incorrect message formatting. 
+      description: Bad request. 
       content:
         application/json:
           schema:  
