--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -341,6 +341,8 @@ paths:
         '204':
           description: |
             byUsername liked photo.
+        '400':  {$ref: '#/components/responses/badRequest'}
+        '403':  {$ref: '#/components/responses/forbiddenAccess'}
         '404':  {$ref: '#/components/responses/notFoundError'} 
     put:
       tags: ["Feed operations"]
