--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -7,9 +7,8 @@ COPY . .
 ### Build executables
 RUN go build -o /app/webapi ./cmd/webapi
 
-
 ### Create final container
-FROM debian:bullseye
+FROM debian:stable
 
 ### Inform Docker about which port is used
 EXPOSE 3000 4000
