--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,7 +1,7 @@
 FROM node:lts as builder
 
 ### Copy Vue.js code
-WORKDIR /app
+WORKDIR /app/
 COPY webui webui
 
 ### Build Vue.js into plain HTML/CSS/JS
@@ -10,7 +10,7 @@ RUN npm run build-prod
 
 
 ### Create final container
-FROM nginx:stable
+FROM nginx:1.23.3
 
 ### Copy the (built) app from the builder image
 COPY --from=builder /app/webui/dist /usr/share/nginx/html
