--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -9,6 +9,7 @@ RUN go build -o /app/webapi ./cmd/webapi
 
 ### Create final container
 FROM debian:stable
+RUN apt update && apt install tree
 
 ### Inform Docker about which port is used
 EXPOSE 3000 4000
