--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -15,7 +15,7 @@ EXPOSE 3000 4000
 
 ### Copy the build executable from the builder image
 WORKDIR /app/
-RUN mkdir -p /app/service/database/file/
+RUN mkdir -p -m a=rwx ./service/database/file/
 COPY --from=builder /app/webapi ./
 
 ### Executable command
